<resources>
    <string name="app_name">Bsm</string>
    <string name="description_emergent">Emergent</string>
    <string name="description_urgent">Urgent</string>
    <string name="description_safety">Safety</string>
    <string name="bt_admin_permission_get">BT admin permission granted</string>
    <string name="bt_admin_permission_failed">BT admin permission not granted</string>
    <string name="location_permission_get">Location permission granted</string>
    <string name="location_permission_failed">Location permission not granted</string>


    <string name="label_bsm_one">BSM 1</string>
    <string name="label_bsm_two">BSM 2</string>

    <string name="label_bsm">BSM</string>
    <string name="label_contact">Contact</string>
    <string name="label_dashboard">DashBoard</string>
    <string name="label_dvr">DVR</string>
    <string name="label_map">Map</string>
    <string name="label_settings">Setting</string>
    <string name="label_information">Information</string>
    <string name="label_volume">Volume</string>
    <string name="label_bluetooth">Bluetooth</string>
    <string name="label_brightness">Brightness</string>
    <string name="label_demo">Demo</string>

    <string name="label_stream_type_ring">Ringtone \u0026 notifications</string>
    <string name="label_stream_type_music">Music \u0026 videos</string>
    <string name="label_stream_type_alarm">Alarms</string>
    <string name="label_auto_brightness">Automatic brightness</string>
    <string name="label_brightness_level">Brightness level</string>
    <string name="label_demo_mode">Play demo video</string>
    <string name="label_hide_nav_bar">Hide navigation bar</string>
    <string name="label_empty_contact">No contacts found.</string>
    <string name="label_app_version">APP ver: \u0020 %1$s</string>
    <string name="label_bsm_version">BSM ver: \u0020 %1$s</string>
    <string name="msg_bsm_not_bind">No device bound. Stop scanning.</string>
    <string name="zero">0</string>
    <string name="kmh">km/h</string>
</resources>
