<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSettingSelectedBg">

    <TextView
        android:id="@+id/ring_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:maxLines="1"
        android:text="@string/label_stream_type_ring"
        android:textColor="@android:color/white"
        android:textSize="@dimen/brightness_content_font_size"
        app:layout_constraintBottom_toTopOf="@+id/t_guideline"
        app:layout_constraintStart_toStartOf="@+id/l_guideline" />

    <android.support.v7.widget.AppCompatSeekBar
        android:id="@+id/ring_seek_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:focusable="true"
        android:maxHeight="@dimen/brightness_progress_bar_height"
        android:nextFocusLeft="@id/alarm_seek_bar"
        android:nextFocusRight="@+id/music_seek_bar"
        android:progressDrawable="@drawable/ic_seekbar_selector"
        android:thumb="@drawable/ic_thumb_selector"
        android:thumbOffset="-0dp"
        app:layout_constraintBottom_toTopOf="@+id/music_text"
        app:layout_constraintEnd_toStartOf="@id/r_guideline"
        app:layout_constraintStart_toEndOf="@id/l_guideline"
        app:layout_constraintTop_toTopOf="@+id/t_guideline" />

    <TextView
        android:id="@+id/music_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:maxLines="1"
        android:text="@string/label_stream_type_music"
        android:textColor="@android:color/white"
        android:textSize="@dimen/brightness_content_font_size"
        app:layout_constraintBottom_toTopOf="@+id/m_guideline"
        app:layout_constraintStart_toStartOf="@+id/l_guideline" />

    <android.support.v7.widget.AppCompatSeekBar
        android:id="@+id/music_seek_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:focusable="true"
        android:maxHeight="@dimen/brightness_progress_bar_height"
        android:nextFocusLeft="@id/ring_seek_bar"
        android:nextFocusRight="@+id/alarm_seek_bar"
        android:progressDrawable="@drawable/ic_seekbar_selector"

        android:thumb="@drawable/ic_thumb_selector"
        android:thumbOffset="-0dp"
        app:layout_constraintBottom_toTopOf="@+id/alarm_text"
        app:layout_constraintEnd_toStartOf="@id/r_guideline"
        app:layout_constraintStart_toEndOf="@id/l_guideline"
        app:layout_constraintTop_toTopOf="@+id/m_guideline" />

    <TextView
        android:id="@+id/alarm_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:maxLines="1"
        android:text="@string/label_stream_type_alarm"
        android:textColor="@android:color/white"
        android:textSize="@dimen/brightness_content_font_size"
        app:layout_constraintBottom_toTopOf="@+id/b_guideline"
        app:layout_constraintStart_toStartOf="@+id/l_guideline" />

    <android.support.v7.widget.AppCompatSeekBar
        android:id="@+id/alarm_seek_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_five"
        android:focusable="true"
        android:maxHeight="@dimen/brightness_progress_bar_height"
        android:nextFocusLeft="@id/music_seek_bar"
        android:nextFocusRight="@+id/ring_seek_bar"
        android:progressDrawable="@drawable/ic_seekbar_selector"
        android:thumb="@drawable/ic_thumb_selector"
        android:thumbOffset="-0dp"
        app:layout_constraintEnd_toStartOf="@id/r_guideline"
        app:layout_constraintStart_toEndOf="@id/l_guideline"
        app:layout_constraintTop_toTopOf="@+id/b_guideline" />

    <android.support.constraint.Guideline
        android:id="@+id/r_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <android.support.constraint.Guideline
        android:id="@+id/l_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/t_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <android.support.constraint.Guideline
        android:id="@+id/m_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/b_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

</android.support.constraint.ConstraintLayout>